parser/src/test/resources/corpus/invalid/06_junk_at_top_level.ff
$$$ unexpected garbage at top level $$$
